CSS/style.css
/* ... */
@media screen and (max-width: 768px) {
  .wrapper {
    margin: 0 auto;
    max-width: 768px;
  }
  .header {
    display: flex;
    flex-direction: column;
    margin-left: 0;
  }

  nav {
    width: 100%;
  }
  .nav-content {
    display: flex;
    justify-content: center;
    padding: 0;
  }
  .nav_left {
    margin-right: 0;
    margin-left: 33px;
  }
  .nav_right {
    margin-right: 65px;
    margin-left: 91px;
  }
  .nav-content li::before {
    content: "";
    position: absolute;
    height: 2px;
    width: 100%;
    top: 20px;
    background: #80808033;
  }

  .menu {
    display: flex;
    justify-content: center;
    margin: 0;
  }
  .header_title {
    margin-right: 57px;
    margin-left: 20px;
  }
  .title {
    width: 298px;
    font-size: 22px;
  }
  .subtitle {
    font-size: 15.5px;
    margin-bottom: 0;
  }
  .search {
    display: flex;
    justify-content: center;
    margin-top: 36px;
    margin-right: 22px;
    margin-left: 0;
  }
  .search_btn {
    display: none;
  }

  .fa-location-dot {
    font-size: 18px;
    padding: 16px 15px 15px 18px;
    border-top-left-radius: 15px;
    border-bottom-left-radius: 15px;
  }

  .city::placeholder {
    font-size: 18px;
    padding: 14px 68px 14px 16px;
  }
  .fa-magnifying-glass {
    padding: 16px;
    margin-left: 40px;
    font-size: 17px;
    border-top-right-radius: 15px;
    border-bottom-right-radius: 15px;
    color: white;
    background: var(--blue);
    border: none;
    cursor: pointer;
    visibility: visible;
  }

  .filters {
    display: flex;
    flex-direction: column;
    align-items: center;
    margin-right: 0;
    margin-left: 0;
    width: 100%;
  }
  .filter_title {
    margin-left: 0;
    margin-right: 270px;
    font-size: 18px;
  }

  .filter_container {
    width: 328px;
  }
  .filter_category {
    display: flex;
    flex-wrap: wrap;
    margin: 0;
  }

  .filter {
    display: flex;
    align-items: center;
    width: 150px;
    padding-top: 19px;
    padding-right: 0;
    padding-left: 0;
    padding-bottom: 18px;
    font-size: 11px;
    font-weight: bold;
  }
  .icon {
    font-size: 15px;
    margin-right: 5px;
  }
  .eco {
    margin-right: 14px;
  }

  .fa-money-bill-1-wave {
    padding-left: 13px;
  }
  .fam {
    margin-right: 0px;
  }

  .fa-person {
    padding-left: 18px;
  }
  .rom {
    margin-right: 14px;
  }

  .fa-heart {
    padding-left: 13px;
  }

  .animaux {
    margin-right: 0;
  }

  .fa-dog {
    padding-left: 13px;
  }
  .infos {
    display: flex;
    justify-content: center;
    font-size: 16px;
    margin-left: 0;
  }
  .icon_info {
    margin-left: 22px;
  }

  .info_text {
    width: 298px;
  }
  .card {
    display: flex;
    flex-direction: column-reverse;
    align-items: center;
  }

  .hebergements {
    background: white;
    display: flex;
    flex-direction: column;
    align-items: center;
  }
  .left_title {
    font-size: 22px;
    text-align-last: left;
    padding: 0;
    width: 280px;
    margin-top: 26px;
    margin-right: 30px;
    margin-bottom: 19px;
  }
  .card_hebergement {
    display: flex;
    justify-content: center;
    margin-left: 0;
    margin-right: 0;
  }

  .hebergement_marseille {
    margin-bottom: 12px;
  }
  .photo_hebergement {
    width: 318px;
    height: 124px;
  }
  .more {
    display: none;
  }
  .popular {
    display: flex;
    flex-direction: column;
    margin-top: 17px;
  }

  .right_title {
    display: flex;
    justify-content: space-between;
    padding: 0;
    font-size: 22px;
    margin-top: 28px;
    margin-bottom: 26px;
    margin-left: 20px;
  }

  .fa-chart-line {
    margin-right: 21px;
    font-size: 14.38px;
    width: 18px;
  }
  .card_popular {
    display: flex;
    flex-direction: column;
    margin-left: 20px;
    margin-right: 21px;
  }
  .hebergement_populaire {
    margin-bottom: 11px;
  }
  .photo_pop {
    height: 144px;
    width: 137px;
    margin-top: 5px;
    margin-bottom: 5px;
  }
  .name_pop {
    font-size: 16px;
    width: 169px;
  }
  .price_hebergement_pop {
    font-size: 14px;
    width: 169px;
  }
  .activites {
    display: flex;
    flex-direction: column;
    align-items: center;
    margin-left: 10px;
    margin-right: 0;
  }
  .activite {
    display: flex;
    flex-direction: column;
    align-items: center;
  }

  .activite_title {
    display: flex;
    font-size: 22px;
    width: 180px;
    margin-top: 105px;
    margin-right: 141px;
    margin-bottom: 0;
  }
  .activite_container {
    margin-bottom: 24px;
  }
  .photo_activite {
    width: 320px;
    height: 150px;
  }

  .activite_name {
    width: 247px;
  }

  footer {
    display: flex;
    justify-content: center;
    background: var(--background);
  }
  .footer_container {
    display: flex;
    flex-direction: column;
    margin: 0;
    padding-top: 45px;
    padding-right: 100px;
    padding-bottom: 61px;
  }

  .footer_content {
    margin-top: 0;
    width: 100%;
  }

  .footer_title {
    font-size: 18px;
    margin-left: 0;
    margin-bottom: 20px;
    width: 166px;
  }

  .fonct {
    padding: 0;
    font-size: 16px;
    margin-left: 0;
    margin-bottom: 12px;
  }

  .data {
    margin-bottom: 40px;
  }

  .propose {
    margin-bottom: 51px;
  }

  .contact {
    margin-bottom: 61px;
  }
}

